0.1 initial working unpublished version
0.2 performance enhancements:
    - keys are now represented as lists
    - general optimizations
    documentation written
    code cleanup
0.3 Bugfix in password generation
    documentation cleanup
0.4 Increased ocb performance and adjusted possible blocksizes
    Replaced aes-ocb-max-default-length by aes-default-method
0.5 Bugfix in the case of a false password
    Improved performance of some functions
    Added support for multiple padding formats
    Updated documentation
0.6 Changed order of parameter in a few functions
    - aes-enlarge-to-multiple-num
    - aes-ocb-encrypt
    - aes-ocb-decrypt
    - aes-key-from-passwd
    Disabled autosaving of encrypted files in unencrypted form
    Made documentation compatible with checkdoc
    Updated documentation
    Removed compile warning
    Removed support for Emacs 21
    Changed Emacs Version recommendations
0.7 Move generation of a key from a password to a separate function
    Allow usage of external password for buffer-en/de-cryption.