@@ -1,2 +1,0 @@
-You will find all relevant information in the Commentary section of
-the file aes.el.
