@@ -1,0 +1,36 @@
+# emacs-aes - Implementation of AES in Emacs-Lisp
+
+
+## License
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or (at
+your option) any later version.
+
+This program is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+
+## Usage
+
+All information about the usage you will find in the commentary
+section of the file aes.el
+
+
+## Important Stuff for V 0.7
+
+The format for saving has changed from Version 1.2 to 1.3. Please load
+and save all encrypted files. Loading files stored in format V1.2
+will be removed in one of the next versions.
+
+
+## Thanks for your suggestions and support
+
+- Frederico Munoz
+- Zhang Kai Yu
